--- a/chat-app/src/App.css
+++ b/chat-app/src/App.css
@@ -1,3 +1,17 @@
 .App {
   text-align: center;
 }
+
+.app-form {
+  padding: 20px;
+  position: fixed;
+  bottom: 0;
+  z-index: 1;
+  background-color: #e9e9eb;
+  width: 100%;
+  margin: 20px;
+}
+
+body {
+  background-color: #D8D1C7;
+}
