--- a/chat-app/src/App.css
+++ b/chat-app/src/App.css
@@ -1,3 +1,7 @@
+body {
+  background-color: #D8D1C7;
+}
+
 .App {
   text-align: center;
 }
@@ -8,10 +12,25 @@
   bottom: 0;
   z-index: 1;
   background-color: #e9e9eb;
-  width: 100%;
+  width: 80%;
   margin: 20px;
 }
 
-body {
-  background-color: #D8D1C7;
+.app-formControl {
+  display: flex !important;
+  flex-direction: row !important;
+}
+
+.app-input {
+  flex: 1;
+}
+
+.app-iconButton {
+  flex: 0;
+  color: #037969 !important;
+}
+
+.app-iconButton:disabled {
+  flex: 0;
+  color: rgb(173, 173, 173) !important;
 }
