--- a/chat-app/src/App.css
+++ b/chat-app/src/App.css
@@ -6,6 +6,12 @@ body {
   background-attachment: fixed;
 }
 
+@media only screen and (max-width: 975px) {
+  body {
+    background-size: 50%;
+  }
+}
+
 .App {
   text-align: center;
 }
